2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/trackerd/tracker-crawler.c: Make sure we have a queue PER
	module name, this way we don't get the "module not loaded" error
	when we stop crawling one module and start another (cause we were
	freeing the priv->module_name and the queues are handled AFTER
	crawling has stopped). 

2008-07-03  Ivan Frade  <ivan.frade@nokia.com>
	
	* src/libtracker-common/tracker-nfs-lock.c: using username instead
	of PID to the nfs lock filename.
	
	* src/trackerd/tracker-main.c: Updated code to handle multiple 
	instances.
		
2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.c: Don't set the
	LowMemoryMode to True by default!

2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-config.[ch]: Removed
	ThreadStackSize since it is no longer used.
	
	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c: Improved startup option sanity
	check output so we only show daemon or indexer options, not
	everything. 

2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.c: (hal_setup_batteries),
	(hal_device_property_modified_cb): Fixed some debugging.
	* src/tracker-indexer/tracker-indexer.c: (set_up_throttle): Make
	sure we set to the right the default when we come off battery only
	use.

2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/libtracker-common/tracker-hal.c: (hal_setup_batteries),
	(hal_device_property_modified_cb): Make sure we call
	g_object_notify() when properties change.

2008-07-03  Martyn Russell  <martyn@imendio.com>

	* src/tracker-indexer/tracker-indexer.c: Added throttling support.

2008-07-03  Philip Van Hoof  <pvanhoof@gnome.org>

	* src/tracker-indexer/tracker-main.c:
	* src/trackerd/tracker-main.c:
	* src/libtracker-db/tracker-db-manager.c:
	* src/libtracker-db/tracker-db-manager.h:

	LowMemoryMode for the new generation!

2008-07-03  Philip Van Hoof  <pvanhoof@gnome.org>
